force-app/main/default/objects/RE_Field_Value_Mappings__c/RE_Field_Value_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for Field Value mappings in Revolution</description>
    <label>RE Field Value Mappings</label>
</CustomObject>