force-app/main/default/objects/RE_Field_Value_Mappings__c/fields/Mapping_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Field_Value__c</fullName>
    <label>Mapping Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>