force-app/main/default/objects/RE_Field_Value_Mappings__c/fields/Source_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Value__c</fullName>
    <label>Source Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>