force-app/main/default/objects/RE_Field_Value_Mappings__c/listViews/Canada_Field_Value_Mappings.listView-meta.xml
<ListView>
    <fullName>Canada_Field_Value_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Country_Name__c</columns>
    <columns>Purpose__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Source_Field_Value__c</columns>
    <columns>Mapping_Field_Value__c</columns>
    <columns>Comments__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Name__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Canada Field Value Mappings</label>
    <language>en_US</language>
</ListView>